tests/sksl/errors/golden/Discard.skvm
### Compilation failed:

error: 2: discard statement is only permitted in fragment shaders
1 error
